@@ -4,6 +4,8 @@ Products.CMFCore Changelog
 2.3.0-alpha (unreleased)
 ------------------------
 
+- Updated setDefaultRoles to use the addPermission API if available.
+
 - Added a permissions.zcml file defining our own permissions. This was
   formerly done in Zope 2's Products.Five.
 
